--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
         "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mobile-detect": "^1.4.5",
-        "mongodb": "^4.1.0",
+        "mongodb": "^4.1.1",
+        "pluralize": "^8.0.0",
         "volleyball": "^1.5.1"
     },
     "devDependencies": {
         "commander": "^7.2.0",
         "cross-env": "^7.0.3",
         "nodemon": "^2.0.7",
-        "npm": "^7.13.0"
+        "npm": "^7.21.1"
     },
     "engines": {
         "node": ">=12.19.0",
