--- a/package.json
+++ b/package.json
@@ -18,21 +18,14 @@
     },
     "license": "MIT",
     "dependencies": {
-        "cookie-parser": "^1.4.5",
-        "csurf": "^1.11.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-access-proxy-actions": "^1.1.1",
         "express-access-proxy-base": "^1.1.1",
-        "express-fingerprint": "^1.2.2",
+        "express-access-proxy-middlewares": "^1.1.1",
         "express-http-proxy": "^1.6.2",
-        "express-rate-limit": "^5.3.0",
-        "express-slow-down": "^1.4.0",
         "http-errors": "^1.8.0",
-        "method-override": "^3.0.0",
-        "mobile-detect": "^1.4.5",
-        "pluralize": "^8.0.0",
-        "volleyball": "^1.5.1"
+        "pluralize": "^8.0.0"
     },
     "devDependencies": {
         "commander": "^8.2.0",
