--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-access-proxy-actions": "^1.1.2",
-        "express-access-proxy-base": "^1.1.2",
-        "express-access-proxy-middlewares": "^1.1.2",
+        "express-access-proxy-actions": "^1.1.3",
+        "express-access-proxy-base": "^1.1.3",
+        "express-access-proxy-middlewares": "^1.1.3",
         "express-http-proxy": "^1.6.2",
         "http-errors": "^1.8.0",
         "pluralize": "^8.0.0"
@@ -31,7 +31,7 @@
         "commander": "^8.2.0",
         "cross-env": "^7.0.3",
         "nodemon": "^2.0.13",
-        "npm": "^8.0.0"
+        "npm": "7.24.2"
     },
     "engines": {
         "node": ">=12.19.0",
