--- a/config/env/.env.production
+++ b/config/env/.env.production
@@ -1,5 +1,5 @@
 # in env files the keys must have similar names, values can differ, and using scripts we load env specific file
-APP_NAME = vector
+APP_NAME = Express Access Proxy
 PORT = 7331
 
 # Security - COOKIE_SECRET must exist here even if secure cookies are not used (cookie parser runs before server is set)
