--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-access-proxy-actions": "^1.1.6",
-        "express-access-proxy-base": "^1.1.6",
-        "express-access-proxy-middlewares": "^1.1.6",
+        "express-access-proxy-actions": "1.2.0",
+        "express-access-proxy-base": "1.2.0",
+        "express-access-proxy-middlewares": "1.2.0",
         "express-http-proxy": "^1.6.2",
         "http-errors": "^1.8.0",
         "pluralize": "^8.0.0"
